[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-markdown"
version = "0.1.0"
description = "Feishu knowledge base MCP tool and Markdown exporter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
feishu-markdown = "feishu_markdown.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
